# memer-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/memer/: main.py
src/memer/cli_commands/: config.py  create.py  templates.py
src/memer/config/: default_configuration.yaml  default_memes.yaml
src/memer/core/: container.py  exceptions.py  validation.py
src/memer/font/: LICENSE
src/memer/utils/: helper_methods.py  images.py  memer_exceptions.py  remote_templates.py  settings.py
tests/: __init__.py  conftest.py
tests/core/: test_validation.py
